<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vudn.myfood.view.start_screen.SlashScreenActivity">

    <ImageView
        android:contentDescription="Hình nền khởi động"
        android:id="@+id/img_slash_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangnhap"/>

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="48sp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/phienban"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

    <LinearLayout
        android:id="@+id/lnl_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_address"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:indeterminateTint="@android:color/background_light" />

        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dangtai"
            android:textColor="@android:color/background_light"
            tools:text="@string/dangtai" />
    </LinearLayout>
</RelativeLayout>
